# SoftwareEngineering-personalHW

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Point.cpp  Point.h  Shapes.cpp  Shapes.h  main.cpp
test/: testPoint.cpp  testShapes.cpp
